--- a/20251118_biologia.html
+++ b/20251118_biologia.html
@@ -141,9 +141,7 @@ const rawQuestions = {
     { text:"Jakie struktury serca zapobiegają cofaniu się krwi?", options:["Komory","Zastawki","Przegrody","Naczynia wieńcowe"], correct:1 },
     { text:"Jak nazywają się dwie główne części serca pompujące krew?", options:["Przedsionki","Komory","Zastawki","Osierdzie"], correct:1 },
     { text:"Jak nazywa się obieg krwi prowadzący z prawej komory do płuc i z powrotem?", options:["Obieg duży","Obieg wrotny","Płucny obieg krwi","Obieg skórny"], correct:2 },
-    { text:"Który zapis przedstawia prawidłowy schemat krzepnięcia krwi?", options:["Fibrina → Fibrynogen → Skrzep","Skrzep → Fibrynogen → Fibrina","Fibrynogen → Fibrina → Skrzep","Fibrina → Skrzep → Fibrynogen"], correct:2 }
-  ],
-  medium: [
+    { text:"Który zapis przedstawia prawidłowy schemat krzepnięcia krwi?", options:["Fibrina → Fibrynogen → Skrzep","Skrzep → Fibrynogen → Fibrina","Fibrynogen → Fibrina → Skrzep","Fibrina → Skrzep → Fibrynogen"], correct:2 },
     { text:"Osocze to…", options:["Płynna część krwi zawierająca białka i substancje odżywcze","Komórki odpowiedzialne za transport tlenu","Elementy krwi uczestniczące w krzepnięciu","Najmniejsze naczynia krwionośne organizmu"], correct:0 },
     { text:"Płytki krwi to…", options:["Komórki transportujące tlen do tkanek","Elementy biorące udział w procesie krzepnięcia krwi","Komórki broniące organizm przed drobnoustrojami","Części serca zapobiegające cofaniu krwi"], correct:1 },
     { text:"Erytrocyty to…", options:["Komórki odpornościowe produkujące przeciwciała","Komórki transportujące tlen w organizmie","Naczynia odprowadzające krew z serca","Płynna część krwi z białkami"], correct:1 },
@@ -158,7 +156,30 @@ const rawQuestions = {
     { text:"Płucny obieg krwi to…", options:["Droga krwi z prawej komory do płuc i z powrotem do lewego przedsionka","Wymiana tlenu w naczyńkach włosowatych","Krążenie krwi w całym organizmie","Transport krwi przez zastawki"], correct:0 },
     { text:"„Fibrynogen → Fibrina → Skrzep” to…", options:["Schemat procesu krzepnięcia krwi","Opis działania komór odpornościowych","Kolejność etapów wymiany gazowej","Nazwy tkanek układu limfatycznego"], correct:0 }
   ],
+  medium: [
+{ text:"Jakie są główne funkcje krwi?", options:["Transportowa, termoregulacyjna, ochronna","Budowanie kości","Tworzenie hormonów","Regulacja trawienia"], correct:0 },
+{ text:"Czym jest krew?", options:["Tkanką łączną płynną","Rodzajem nabłonka","Tkanką nerwową","Częścią układu kostnego"], correct:0 },
+{ text:"Jaką funkcję pełnią krwinki czerwone?", options:["Transportują tlen","Wytwarzają hormony","Rozkładają toksyny","Produkują enzymy trawienne"], correct:0 },
+{ text:"Jaką rolę pełnią krwinki białe?", options:["Odpowiadają za odporność","Przenoszą impulsy nerwowe","Budują skórę","Wytwarzają insulinę"], correct:0 },
+{ text:"Co robią limfocyty?", options:["Rozpoznają antygeny i wytwarzają odpowiedź odpornościową","Transportują CO₂","Zagęszczają krew","Tworzą włókna mięśniowe"], correct:0 },
+{ text:"Jaka jest funkcja monocytów?", options:["Przekształcają się w makrofagi","Tworzą hemoglobinę","Powodują krzepnięcie krwi","Są hormonami białkowymi"], correct:0 },
+{ text:"Czym jest fibrynogen?", options:["Białkiem osocza biorącym udział w krzepnięciu","Rodzajem cukru","Enzymem trawiennym","Składnikiem limfy"], correct:0 },
+{ text:"Co to jest fibryna?", options:["Włóknista sieć tworząca skrzep","Komórka odpornościowa","Hormon białkowy","Część nerki"], correct:0 },
+{ text:"Czym jest skrzep?", options:["Zagęszczoną formą krwi powstałą z fibryny","Komórką nerwową","Rodzajem białka odpornościowego","Tkanką miękką"], correct:0 },
+{ text:"Co wchodzi w budowę serca?", options:["Przedsionki, komory, zastawki","Tylko przedsionki","Tylko komory","Same zastawki"], correct:0 },
+{ text:"Gdzie znajduje się czerwony szpik kostny?", options:["W kościach płaskich","W płucach","W skórze","W sercu"], correct:0 },
+{ text:"Co robi grasica?", options:["Dojrzewają w niej limfocyty T","Filtruje krew","Wytwarza erytrocyty","Magazynuje tłuszcz"], correct:0 },
+{ text:"Jaką funkcję pełni śledziona?", options:["Filtruje krew i limfę","Reguluje temperaturę","Wytwarza enzymy","Buduje włosy"], correct:0 },
+{ text:"Za co odpowiadają węzły chłonne?", options:["Filtrowanie limfy","Produkcję żółci","Wytwarzanie witamin","Transport tlenu"], correct:0 },
+{ text:"Czym są grudki limfatyczne?", options:["Skupiskami limfocytów","Hormonami","Komórkami nerwowymi","Rodzajem hemoglobiny"], correct:0 },
+{ text:"Gdzie znajdują się migdałki podniebienne?", options:["W gardle","W żołądku","W oskrzelach","W pęcherzu"], correct:0 }
+  ],
   hard: [
+{ text:"Za co odpowiada układ bodźcowo-przewodzący serca?", options:["Za rytmiczną pracę serca","Za wymianę gazową","Za filtrację krwi","Za odporność"], correct:0 },
+{ text:"Gdzie znajduje się węzeł zatokowo-przedsionkowy?", options:["W prawym przedsionku","W lewej komorze","W tętnicy płucnej","W aorcie"], correct:0 },
+{ text:"Co robi węzeł przedsionkowo-komorowy?", options:["Opóźnia impuls między przedsionkami a komorami","Pompuje krew","Wytwarza hormony","Reguluje trawienie"], correct:0 },
+{ text:"Jaką funkcję pełni pęczek Hisa?", options:["Przewodzi impuls do komór serca","Tworzy limfocyty","Usuwa patogeny","Filtruje limfę"], correct:0 },
+{ text:"Co obejmuje ustrojowy obieg krwi?", options:["Przepływ krwi przez całe ciało","Tylko krążenie w płucach","Jedynie serce","Układ nerwowy"], correct:0 },
     { text:"Która odpowiedź opisuje funkcję transportową układu krwionośnego?", options:["Przenoszenie substancji","Wytwarzanie limfocytów","Zatrzymywanie patogenów","Produkcja hormonów"], correct:0 },
     { text:"Która odpowiedź opisuje funkcję utrzymywania stałych parametrów organizmu?", options:["Ogrzewanie mięśni","Utrzymanie homeostazy","Transport dźwięku","Tworzenie włókien kolagenu"], correct:1 },
     { text:"Która odpowiedź opisuje funkcję ochronną krwi?", options:["Magazynowanie witamin","Ochrona przed infekcjami","Wytwarzanie melaniny","Transport impulsów"], correct:1 },
@@ -170,7 +191,21 @@ const rawQuestions = {
     { text:"Który narząd odpowiada za dojrzewanie limfocytów T?", options:["Wątroba","Grasica","Jelito cienkie","Skóra właściwa"], correct:1 },
     { text:"Które struktury limfatyczne znajdują się w gardle i chronią przed drobnoustrojami?", options:["Grudki chłonne","Jelita długie","Migdałki podniebienne","Zastawki żylne"], correct:2 },
     { text:"Które skupiska tkanki limfatycznej występują w różnych częściach ciała?", options:["Grudki limfatyczne","Płaty wątrobowe","Zwoje nerwowe","Torebki płucne"], correct:0 },
-    { text:"Który narząd wytwarza elementy krwi i komórki odpornościowe?", options:["Trzustka","Szpik kostny","Nadnercza","Mózgowie"], correct:1 }
+    { text:"Który narząd wytwarza elementy krwi i komórki odpornościowe?", options:["Trzustka","Szpik kostny","Nadnercza","Mózgowie"], correct:1 },
+{ text:"Co obejmuje budowa układu odpornościowego?", options:["Narządy limfatyczne, komórki odpornościowe, naczynia","Tylko limfocyty","Wyłącznie śledzionę","Tylko hormony"], correct:0 },
+{ text:"Jaką funkcję pełni układ odpornościowy?", options:["Chroni organizm przed patogenami","Reguluje trawienie","Transportuje tlen","Tworzy włosy"], correct:0 },
+{ text:"Czym są makrofagi?", options:["Komórkami żernymi niszczącymi patogeny","Białkami transportowymi","Hormonami sterydowymi","Fragmentami skóry"], correct:0 },
+{ text:"Za co odpowiadają limfocyty T?", options:["Bezpośrednio niszczą zakażone komórki","Transportują tlen","Wytwarzają pot","Tworzą hormony"], correct:0 },
+{ text:"Czym są przeciwciała?", options:["Białkami rozpoznającymi i neutralizującymi antygeny","Hormonami","Komórkami nerwowymi","Częścią hemoglobiny"], correct:0 },
+{ text:"Czym są białka ostrej fazy?", options:["Białkami produkowanymi podczas infekcji","Tłuszczami","Cukrami","Hormonami"], correct:0 },
+{ text:"Co to są cytokiny?", options:["Cząsteczkami sygnalizacyjnymi odporności","Witaminami","Enzymami","Rodzajem krwinek"], correct:0 },
+{ text:"Co wyróżnia rodzaje odporności?", options:["Podział na wrodzoną i nabytą","Podział na humoralną i hormonalną","Obecność erytrocytów","Objętość limfy"], correct:0 },
+{ text:"Jak dzielimy odporność nabytą?", options:["Na czynną i bierną","Na ostrą i przewlekłą","Na zewnętrzną i wewnętrzną","Na komórkową i kostną"], correct:0 },
+{ text:"Czym jest konflikt serologiczny Rh?", options:["Niezgodnością antygenów Rh matki i dziecka","Chorobą wirusową","Rodzajem nowotworu","Skutkiem niedoboru żelaza"], correct:0 },
+{ text:"Czym jest pamięć immunologiczna?", options:["Zdolnością organizmu do szybszej reakcji na znany patogen","Procesem oddychania","Transportem wody","Filtracją krwi"], correct:0 },
+{ text:"W jaki sposób nabywamy odporność?", options:["Przez szczepienia lub przechorowanie","Poprzez opalanie","Dzięki witaminie D","W wyniku snu"], correct:0 },
+{ text:"Co to są antygeny zgodności tkankowej HLA?", options:["Białka umożliwiające rozpoznawanie komórek własnych","Hormony wzrostu","Cukry energetyczne","Toksyny bakteryjne"], correct:0 },
+{ text:"Na czym polega immunosupresja?", options:["Osłabieniu działania układu odpornościowego","Zwiększeniu masy mięśniowej","Przyspieszeniu krążenia","Zwiększeniu temperatury ciała"], correct:0 }
   ]
 };
 
