--- a/20251118_biologia.html
+++ b/20251118_biologia.html
@@ -96,7 +96,11 @@
     <header>
       <div>
         <h1>Test: Układ krwionośny i limfatyczny</h1>
-        <div class="meta">Pytania: łatwe → średnie → trudne. Powodzenia!</div>
+        <div class="meta">
+Łatwe: 1-26<br>
+Średnie: 27-42<br>
+Trudne: 43-73
+        </div>
       </div>
       <div class="status">
         <div class="hearts" id="hearts" aria-hidden="true">❤️❤️❤️❤️❤️</div>
