--- a/20251118_biologia.html
+++ b/20251118_biologia.html
@@ -4,7 +4,8 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Test z Biologii — Układ krwionośny i limfatyczny</title>
-  <link rel="icon" href="dawi108.png">
+<link rel="icon" href="dawi108.png" type="image/png">
+<script src="script.js"></script>
 <style>
   :root{
     --bg: #eaf7ea;
