--- a/20260114_biologia.html
+++ b/20260114_biologia.html
@@ -395,7 +395,51 @@ d:"Rodzajem hormonu"},
 a:"Rodzajem dializy polegającym na oczyszczaniu krwi poza organizmem", 
 b:"Badaniem obrazowym", 
 c:"Hormonem nerkowym", 
-d:"Procesem filtracji w wątrobie"}
+d:"Procesem filtracji w wątrobie"},
+
+{cat:"Sprawdzian", q:"Która droga wydalania usuwa dwutlenek węgla z organizmu?", a:"Płuca", b:"Skóra", c:"Nerki", d:"Układ pokarmowy"},
+
+{cat:"Sprawdzian", q:"Jaka substancja jest głównym produktem przemian azotowych u człowieka?", a:"Mocznik", b:"Amoniak", c:"Kwas moczowy", d:"Azotan"},
+
+{cat:"Sprawdzian", q:"W jakim narządzie zachodzi cykl mocznikowy?", a:"Wątroba", b:"Nerka", c:"Pęcherz moczowy", d:"Trzustka"},
+
+{cat:"Sprawdzian", q:"Z jakich przemian pochodzi azot wykorzystywany w cyklu mocznikowym?", a:"Z przemian białek", b:"Z rozkładu tłuszczów", c:"Z oddychania komórkowego", d:"Z fotosyntezy"},
+
+{cat:"Sprawdzian", q:"Jaką funkcję pełni cykl mocznikowy?", a:"Zmniejsza toksyczność jonów amonowych", b:"Produkuje energię ATP", c:"Syntezuje białka ustrojowe", d:"Magazynuje azot w komórkach"},
+
+{cat:"Sprawdzian", q:"Który narząd odpowiada za filtrację krwi?", a:"Nerka", b:"Wątroba", c:"Serce", d:"Płuco"},
+
+{cat:"Sprawdzian", q:"Który element układu moczowego ma elastyczne ściany?", a:"Pęcherz moczowy", b:"Moczowód", c:"Nerka", d:"Cewka moczowa"},
+
+{cat:"Sprawdzian", q:"Który element łączy nerkę z pęcherzem moczowym?", a:"Moczowód", b:"Cewka moczowa", c:"Kanalik nerkowy", d:"Torebka kłębuszka"},
+
+{cat:"Sprawdzian", q:"Jaki hormon zwiększa wytwarzanie erytrocytów?", a:"Erytropoetyna", b:"Insulina", c:"Glukagon", d:"Adrenalina"},
+
+{cat:"Sprawdzian", q:"Jak działa wazopresyna na ilość wydalanego moczu?", a:"Zmniejsza jego objętość", b:"Zwiększa jego objętość", c:"Nie wpływa na ilość", d:"Zatrzymuje filtrację krwi"},
+
+{cat:"Sprawdzian", q:"Który element nefronu znajduje się w rdzeniu nerki?", a:"Kanalik nerkowy", b:"Kłębuszek nerkowy", c:"Torebka Bowmana", d:"Tętnica doprowadzająca"},
+
+{cat:"Sprawdzian", q:"Która substancja występuje w większym stężeniu w moczu ostatecznym niż pierwotnym?", a:"Mocznik", b:"Glukoza", c:"Białka", d:"Aminokwasy"},
+
+{cat:"Sprawdzian", q:"Gdzie znajduje się ośrodek wydalania moczu?", a:"W części krzyżowej rdzenia kręgowego", b:"W części piersiowej rdzenia kręgowego", c:"W rdzeniu przedłużonym", d:"W podwzgórzu"},
+
+{cat:"Sprawdzian", q:"Które naczynie krwionośne ma mniejszą średnicę?", a:"Tętniczka wyprowadzająca krew z kłębuszka", b:"Tętniczka doprowadzająca krew do kłębuszka", c:"Żyła odprowadzająca krew z nerki", d:"Tętnica nerkowa"},
+
+{cat:"Sprawdzian", q:"Na czym polega filtracja w nerce?", a:"Na przesączaniu osocza krwi do torebki kłębuszka", b:"Na wchłanianiu zwrotnym wody do krwi", c:"Na wydzielaniu zbędnych hormonów", d:"Na rozkładzie mocznika w nefronie"},
+
+{cat:"Sprawdzian", q:"Jak powstaje mocz pierwotny?", a:"W wyniku filtracji w kłębuszku nerkowym", b:"W wyniku resorpcji i sekrecji", c:"W pęcherzu moczowym", d:"W cewce moczowej"},
+
+{cat:"Sprawdzian", q:"Które działanie należy do profilaktyki układu moczowego?", a:"Regularne wykonywanie badań moczu", b:"Spożywanie dużej ilości soli", c:"Picie bardzo małych ilości wody", d:"Unikanie aktywności fizycznej"},
+
+{cat:"Sprawdzian", q:"Jaki skutek ma wzrost stężenia hormonu ADH?", a:"Wydalanie bardziej zagęszczonego moczu", b:"Wydalanie moczu rozcieńczonego", c:"Zahamowanie pracy nerek", d:"Zmniejszenie wchłaniania wody"},
+
+{cat:"Sprawdzian", q:"Na czym polega badanie urograficzne?", a:"Na podaniu kontrastu i obserwacji układu moczowego", b:"Na analizie składu chemicznego moczu", c:"Na badaniu ultradźwiękami pęcherza", d:"Na pobraniu krwi do badań"},
+
+{cat:"Sprawdzian", q:"Ile płynów dziennie powinien wypijać dorosły człowiek?", a:"Około 2 litrów dziennie", b:"Około 0,5 litra dziennie", c:"Ponad 5 litrów dziennie", d:"Tylko wtedy, gdy odczuwa pragnienie"},
+
+{cat:"Sprawdzian", q:"Która substancja przyczynia się do powstawania kamieni nerkowych?", a:"Szczawian wapnia", b:"Glukoza", c:"Hemoglobina", d:"Białko osocza"},
+
+{cat:"Sprawdzian", q:"Która metoda diagnostyczna wykorzystuje ultradźwięki?", a:"USG jamy brzusznej", b:"Urografia kontrastowa", c:"Badanie ogólne moczu", d:"Analiza biochemiczna krwi"}
 ];
 
 let current = 0;
